<resources>
    <string name="app_name">HW2</string>
    <string name="price">Price</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="clear">CLEAR</string>
    <string name="twenties">$20:\ </string>
    <string name="tens">$10:\ </string>
    <string name="fives">$5:\ </string>
    <string name="ones">$1:\ </string>
    <string name="quarters">25¢:\ </string>
    <string name="dimes">10¢:\ </string>
    <string name="nickels">5¢:\ </string>
    <string name="pennies">1¢:\ </string>
</resources>